--- a/Assignment-2.html
+++ b/Assignment-2.html
@@ -92,7 +92,7 @@
                                         <i class="fas fa-star filled"></i>
                                         <i class="fas fa-star filled"></i>
                                         <i class="far fa-star filled"></i>
-                                        <span>4.0</span>
+                                        <span> 4.0</span>
                                    </div>
                               </div>
                               <div class="info">
@@ -292,8 +292,8 @@
                               almost every high end phone has high pixel camera, you can pick pictures any where when
                               you
                               forget or don;t bring your camera.</p>
-                         <button class="primary-button"><a href="">Buy an iPhone <i
-                                        class="fas fa-arrow-right"></i></a></button>
+                         <button class="primary-button"><a target="_blank" href="https://www.apple.com/">Buy an iPhone
+                                   <i class="fas fa-arrow-right"></i></a></button>
                     </div>
                </div>
           </section>
